1.进一步填充了文法分析部分的代码，目前还剩follow集算法尚未完善 2.优化分析流程 3.编写了Reader示例代码与运行示例的demo 4.主要类型加入序列化接口

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -8,5 +8,20 @@
 最后想着反正语法分析的代码生成都要自动化了，索性顺手把词法分析的关键字表一起填了吧。就变成了现在这个样子。
 
 ## 功能边界确定
+需要包含以下几个组件和附件：
+
+1. 一个需要指定关键字的词法分析器
+2. 一个语法分析器，包含LL(1)分析表
+3. 一个AST基类
+4. 一个文法规则录入工具
 
 ## 实现方式
+### 1.词法分析器（Lex包）
+
+### 2.语法分析器（Parser包）
+
+### 3.AST自动生成（Tree_Span包）
+
+### 4.文法规则解析（GrammarMaker包）
+
+## 未来改进计划
