1.follow集算法完善 2.新的数据结构：层级树 3.完善文档

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -35,23 +35,53 @@
 分析表内容请参阅：  
 https://github.com/kppomzh/Compilation_Principle/blob/master/3.1.%E8%87%AA%E9%A1%B6%E5%90%91%E4%B8%8B%E5%88%86%E6%9E%90%E6%B3%95%E7%9A%84%E9%A2%84%E6%B5%8B%E5%88%86%E6%9E%90%E7%A8%8B%E5%BA%8F(Parser)%E5%8E%9F%E7%90%86%E5%8F%8A%E6%9E%84%E9%80%A0.md
 
-### 3.AST自动生成（Tree_Span包）
+### 3.AST自动生成（JavaPoet包 与 Tree_Span包）
 每个文法节点均包含三个通用protected方法：①添加子节点 ②设置属性 ③获取所有子节点
 
 另外还有一个通用属性“节点名称”以及对应的get/set方法。
 
-三个protected方法是用于继承并且重写的，根据每个节点的不同会有所变化。
+三个protected方法是用于继承并且重写的，根据每个节点的不同会有所变化。三个protected方法重写的规则是这样的：
 
 ### 4.文法规则解析（GrammarMaker包）
+#### 文法节点与产生式加载
 录入工具的主要作用就是读取文法文件。在这里，为了简化分析步骤，没有采用“文法文件内部引用文法文件”的方案，而是用了“外部配置文件依次加载文法文件”的方案；并且指定了三个必须加载的文法文件（虽然你可以不往里面写东西），依次为keyword.grammer / mark.grammer / annotation.grammer，分别代表关键字/符号/注释三类文法符号。
 
 Reader会首先加载这三个文件并将其填到Lex中；然后按行分析grammer.list文件，从上至下加载其中的文件。
 
 所以要求后加载的文件的所有产生式右部使用的文法符号都必须已经包含在先加载和正在加载的文件中，否则会报错表示“文法未定义”。
 
-此后，Reader会计算所有非终结符的follow集（当然会先计算出所有first集），根据这些信息填写Parser的分析表。
+####first集与follow集推导
+此后，Reader会计算所有非终结符的follow集（当然会先计算出所有first集），根据这些信息填写Parser的分析表。  
+如果按照《编译原理》书中的文字描述直接写first集与follow集的算法也未尝不可，只是那种算法很难写，效果也不见得好；只是适合人类学习演算，而不适合用在机器上。  
+所以需要可以一次扫描就构造出所有文法符号的first集与follow集的算法。  
+##### first集递推构造算法
+一个文法符号的first集，可以通过深度遍历扫描其所属的所有产生式右部的第一个文法符号来获得：
+1. 若右部当前符号是终结符，则直接加入左部非终结符的first集，分支遍历触底。
+2. 若右部当前符号是非终结符且first集的长度大于0，则直接将first集加入左部非终结符的first集，分支遍历触底。
+3. 若右部当前符号是非终结符且first集的长度为0，那么用这个非终结符的名称，继续递归的向下构造first集。并且在退出递归的时候将first集添加到左部非终结符的信息中。
 
-再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。
+##### follow集传递构造算法
+因为LL文法当中不可避免的会出现大量的ε终结符，所以follow集涉及到大量非终结符的推理判定。  
+由于在最开始的时候，我们只能知道开始符号S的follow集，所以就根据follow(S)与全体符号的first集来推算全体符号的follow集。 
+为了覆盖全面，构造follow集的时候，需要从开始符号S开始，用依次轮询所有产生式右部的方式逐渐的向下搜索。   
+我们先规定几个符号定义：M是产生式左部的非终结符，L是某个产生式右部的一个文法符号，L+1是L右侧紧连着的第一个符号。  
+由此得到follow集的一般构造算法：
+1. 
+
+
+#### AST类生成信息采集
+再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。  
+
+文法节点的性质由以下几点组成：
+1. 该节点是否是终结符？
+2. 该节点是否是直接右递归的？（会不会循环回来）
+3. 该节点是否仅仅是为了保持某些节点的循环而设计的？（消除左递归以及不定长数组）
+这些性质将会被填充到childNodeProperties中，并且传递给BranchTreeNode类用于生成AST类。
+
+以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：
+1. 如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。
+2. 如果这个语法节点仅包含一条产生式，并且这条产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，即可认为它是一个过渡节点。此时将不对它生成AST类。
+3. 
 
 ## 未来改进计划
 1. 解析文法规则的时候，可以不用显式指定最顶层的几条文法规则到一个固定的开始符号上。  
