给祖国庆生中，无心学习，例行更新下文档吧

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -44,7 +44,9 @@ https://github.com/kppomzh/Compilation_Principle/blob/master/3.1.%E8%87%AA%E9%A1
 
 ### 4.文法规则解析（GrammarMaker包）
 #### 文法节点与产生式加载
-录入工具的主要作用就是读取文法文件。在这里，为了简化分析步骤，没有采用“文法文件内部引用文法文件”的方案，而是用了“外部配置文件依次加载文法文件”的方案；并且指定了三个必须加载的文法文件（虽然你可以不往里面写东西），依次为keyword.grammer / mark.grammer / annotation.grammer，分别代表关键字/符号/注释三类文法符号。
+录入工具的主要作用就是读取文法文件。在这里，为了简化分析步骤，没有采用“文法文件内部引用文法文件”的方案，而是用了“外部配置文件依次加载文法文件”
+的方案；并且指定了三个必须加载的文法文件（虽然你可以不往里面写东西），依次为keyword.grammer / mark.grammer / annotation.grammer，分别
+代表关键字/符号/注释三类文法符号。
 
 Reader会首先加载这三个文件并将其填到Lex中；然后按行分析grammer.list文件，从上至下加载其中的文件。
 
@@ -52,22 +54,34 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 
 ####first集与follow集推导
 此后，Reader会计算所有非终结符的follow集（当然会先计算出所有first集），根据这些信息填写Parser的分析表。  
-如果按照《编译原理》书中的文字描述直接写first集与follow集的算法也未尝不可，只是那种算法很难写，效果也不见得好；只是适合人类学习演算，而不适合用在机器上。  
+如果按照《编译原理》书中的文字描述直接写first集与follow集的算法也未尝不可，只是那种算法很难写，效果也不见得好；只是适合人类学习演算，而不适合
+用在机器上。  
 所以需要可以一次扫描就构造出所有文法符号的first集与follow集的算法。  
 ##### first集递推构造算法
 一个文法符号的first集，可以通过深度遍历扫描其所属的所有产生式右部的第一个文法符号来获得：
 1. 若右部当前符号是终结符，则直接加入左部非终结符的first集，分支遍历触底。
 2. 若右部当前符号是非终结符且first集的长度大于0，则直接将first集加入左部非终结符的first集，分支遍历触底。
-3. 若右部当前符号是非终结符且first集的长度为0，那么用这个非终结符的名称，继续递归的向下构造first集。并且在退出递归的时候将first集添加到左部非终结符的信息中。
+3. 若右部当前符号是非终结符且first集的长度为0，那么用这个非终结符的名称，继续递归的向下构造first集。并且在退出递归的时候将first集添加到左部
+非终结符的信息中。
 
 ##### follow集传递构造算法
-因为LL文法当中不可避免的会出现大量的ε终结符，所以follow集涉及到大量非终结符的推理判定。  
+因为LL文法当中不可避免的会出现大量的ε终结符，所以follow集涉及到大量非终结符的推理判定。但是书中所述的follow集计算方法又过于繁琐，不方便进行实
+现。所以在这里将会对follow集算法进行精确的描述，其中一些模糊的描述将会被精确的动作所替代。  
+本算法的目的是在全局范围内，大部分节点的follow集只需要一遍计算就能得出（当然要是非搞一个到处是嵌套的文法来也没办法），局部存在循环的地方最多只
+要两遍计算就能得出，避免“反复使用以上几条方法”这种没法确凿实现的语句。  
 由于在最开始的时候，我们只能知道开始符号S的follow集，所以就根据follow(S)与全体符号的first集来推算全体符号的follow集。 
 为了覆盖全面，构造follow集的时候，需要从开始符号S开始，用依次轮询所有产生式右部的方式逐渐的向下搜索。   
 我们先规定几个符号定义：M是产生式左部的非终结符，L是某个产生式右部的一个文法符号，L+1是L右侧紧连着的第一个符号。  
 由此得到follow集的一般构造算法：
 1. 
 
+##### 层级树
+
+##### 环的判定方案
+环的判定有几种方法，第一是用邻接表（经过改造）记录所有直接和间接可达的子节点；这样当出现环的时候马上就能判断出来，并且还可以快速的记录循环范围。
+第二种方案是用邻接矩阵或者可达性算法，这种方法不用对数据结构进行修改，但是不适用于可能出现大量环的场合；因为计算通路费时费力，而且很难处理一条通
+路上存在多个重叠节点环的问题。
+所以比较两种方案，更倾向于使用邻接表来处理环。
 
 #### AST类生成信息采集
 再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。  
@@ -80,7 +94,8 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 
 以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：
 1. 如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。
-2. 如果这个语法节点仅包含一条产生式，并且这条产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，即可认为它是一个过渡节点。此时将不对它生成AST类。
+2. 如果这个语法节点仅包含一条产生式，并且这条产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，即可认为它是一个过渡节点。
+此时将不对它生成AST类。
 3. 
 
 ## 未来改进计划
