1.层级树尚不完善，在这个版本中被否定。 2.用邻接矩阵处理依赖。

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -75,13 +75,15 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 由此得到follow集的一般构造算法：
 1. 
 
-##### 层级树
+##### 层级树（HierarchicalTree）
+该方案被否决，至少是暂时被否决。
 
 ##### 环的判定方案
-环的判定有几种方法，第一是用邻接表（经过改造）记录所有直接和间接可达的子节点；这样当出现环的时候马上就能判断出来，并且还可以快速的记录循环范围。
-第二种方案是用邻接矩阵或者可达性算法，这种方法不用对数据结构进行修改，但是不适用于可能出现大量环的场合；因为计算通路费时费力，而且很难处理一条通
-路上存在多个重叠节点环的问题。
-所以比较两种方案，更倾向于使用邻接表来处理环。
+环的判定有几种方法，第一是用邻接表（经过改造）记录所有直接和间接可达的子节点；这样的优点是相对节约内存空间。
+第二种方案是用可达性算法，这种方法不用对数据结构进行修改，但是不适用于可能出现大量环的场合；因为计算通路费时费力，而且很难处理一条通路上存在多个
+重叠节点环的问题。
+第三种方案是用邻接矩阵先记录所有直接相连的节点，然后用沃舍尔算法求传递闭包；这种方法比较消耗内存，但是运行时间只有O(n^3^)。
+所以更倾向于使用第三种方案来处理环，但是目前为止并没有直接使用沃舍尔算法。
 
 #### AST类生成信息采集
 再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。  
