1.继续完善follow集算法，目前仍有bug，但是基本思想和算法已经补齐。 2.更新文档，待完善。

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -4,7 +4,8 @@
 本项目在思路上部分仿照Antlr v4，本来计划单独写一个SQL语言解析成语法树的项目，为此重新翻书学习写教程。   
 但是在重新学习的过程中，觉得即使写一个灵活的按照文法生成代码的工具似乎也并不是那么难。  
 并且哪怕为是精简再精简的SQL的LL(1)文法手工构造一个分析表也是一件非常繁难艰巨毫无趣味的重复工作。于是就动了写个程序自动填分析表的念头。  
-再后来想到仅仅有分析表判断语法是否正确对之后的分析工作毫无作用，于是又开始着手构造AST的数据结构；但是手动构造所有文法产生式的子AST一样也很麻烦，就再次扩展了自动填表程序的功能。  
+再后来想到仅仅有分析表判断语法是否正确对之后的分析工作毫无作用，于是又开始着手构造AST的数据结构；但是手动构造所有文法产生式的子AST一样也很麻烦，
+就再次扩展了自动填表程序的功能。  
 最后想着反正语法分析的代码生成都要自动化了，索性顺手把词法分析的关键字表一起填了吧。就变成了现在这个样子。
 
 ## 功能边界确定
@@ -17,13 +18,15 @@
 
 ## 实现方式
 ### 1.词法分析器（Lex包）
-词法分析器应该为每一个可能读取到的字符设置一个状态码，状态码是用来引导有限自动机进行状态转移的。每个状态码事实上对应了完整的有限自动机的一个子自动机，在这里表现为一个函数的形式。
+词法分析器应该为每一个可能读取到的字符设置一个状态码，状态码是用来引导有限自动机进行状态转移的。每个状态码事实上对应了完整的有限自动机的一个子自
+动机，在这里表现为一个函数的形式。
 
 由于每种单词对应的字符状态都只有几种，这样，在每个子自动机/函数内部，就可以很容易得出现在是否应该继续读入字符并且接续下去，方便进行分词。
 
 除了符号，因为多个字符连在一起也有可能分属不同的符号单词，此时需要每次读入符号就判断一次。
 
-需要注意的是，划分字符所属的状态时，如果两个字符的作用有任何不一致，那么一定要分到两个状态码下面去。因为如果分开的话只需要在每个子自动机里多添加一个节点两条路径；不分开的话就要在不同的节点里写逻辑判断，这样难度更大而且更容易出错。
+需要注意的是，划分字符所属的状态时，如果两个字符的作用有任何不一致，那么一定要分到两个状态码下面去。因为如果分开的话只需要在每个子自动机里多添加
+一个节点两条路径；不分开的话就要在不同的节点里写逻辑判断，这样难度更大而且更容易出错。
 
 ### 2.语法分析器（Parser包）
 仅由一个主控程序和一个分析表组成，根据Lex传递的符号流和分析表内容改写分析栈
@@ -73,7 +76,15 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 为了覆盖全面，构造follow集的时候，需要从开始符号S开始，用依次轮询所有产生式右部的方式逐渐的向下搜索。   
 我们先规定几个符号定义：M是产生式左部的非终结符，L是某个产生式右部的一个文法符号，L+1是L右侧紧连着的第一个符号。  
 由此得到follow集的一般构造算法：
-1. 
+1. 声明一份“无依赖文法节点”列表S。
+2. 从左到右扫描每条产生式右部，当L与L+1都是非终结符的时候，记录二者的传递关系Ω(L+1,L):follow(L)=follow(L)&first(L+1)&(ε∈first(L+1)?
+follow(L+1):null)，并将L+1从S中移除。
+3. 从左到右扫描每条产生式右部，当L是非终结符且L+1是终结符的时候，follow(L)=follow(L)+(L+1)。
+4. 扫描到产生式右部结尾的时候，若M与L都是非终结符，记录二者的传递关系Ω(M,L):follow(L)=follow(L)&follow(M)，并将L从S中移除。
+需要注意的是，2和4两条规则所存储的关系并不一样，一定不能保存在一起。
+
+上述几条只是记录了集合间的传递关系，实际传递过程中则有链式依赖传递和环式依赖脱钩的方法：
+1.
 
 ##### 层级树（HierarchicalTree）
 该方案被否决，至少是暂时被否决。
@@ -82,8 +93,9 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 环的判定有几种方法，第一是用邻接表（经过改造）记录所有直接和间接可达的子节点；这样的优点是相对节约内存空间。
 第二种方案是用可达性算法，这种方法不用对数据结构进行修改，但是不适用于可能出现大量环的场合；因为计算通路费时费力，而且很难处理一条通路上存在多个
 重叠节点环的问题。
-第三种方案是用邻接矩阵先记录所有直接相连的节点，然后用沃舍尔算法求传递闭包；这种方法比较消耗内存，但是运行时间只有O(n^3^)。
-所以更倾向于使用第三种方案来处理环，但是目前为止并没有直接使用沃舍尔算法。
+第三种方案是用邻接矩阵先记录所有直接相连的节点，然后用沃舍尔算法求传递闭包（如果需要间接连接信息）；这种方法比较消耗内存，但是运行时间只有O(n^3^)。
+所以更倾向于使用第三种方案来处理环。
+另外考虑到以后的扩展，可能用计数引用计算依赖会更好一点？
 
 #### AST类生成信息采集
 再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。  
@@ -96,14 +108,18 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 
 以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：
 1. 如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。
-2. 如果这个语法节点仅包含一条产生式，并且这条产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，即可认为它是一个过渡节点。
-此时将不对它生成AST类。
-3. 
+2. 如果这个语法节点仅包含一条有效产生式和一条空产生式（可选），并且有效产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，
+即可认为它是一个过渡节点。此时将不对它生成AST类。
+3. 如果该节点存在多个完全相同的子部分串联起来的话，意味着包含某些隐式的有限循环。
+另外，对于类似标准SQL中union这样的结构而言，并不能算在“为了保持循环而设计”的范畴。
 
 ## 未来改进计划
-1. 解析文法规则的时候，可以不用显式指定最顶层的几条文法规则到一个固定的开始符号上。  
+1. 本质上S作为开始符号不是一个显式的过程，但是现在的实现并没有设计这部分，所以只能规定写上S的产生式并暂且规定S不能出现在任何产生式的右部；以后
+解析文法规则的时候，可以不用显式指定最顶层的几条文法规则到一个固定的开始符号上。  
 2. 增加对词法符号的分析，例如定义某些字符属于标点符号，定义另一些字符属于数的构成部分；两个分组之间可以有交集；  
 同属于一个集合中的字符将会分配相同的状态码，其他未定义的符号分配默认状态码，与退出状态码相区别。  
 3. 对string的定义，将会修改成允许用户自定义起止字符，以及有关标识符大小写不敏感的标记。  
 4. 语法解析修改为自适应LL(k)的形式，以便解决某些不属于LL(1)但属于LL文法的表达式解析。  
 5. 如果可能的话，统一分析后生成分析结果的形式。考察“反序列加载”或“Java file动态编译”哪种使用更方便。
+6. 现在的实现没有考虑到“follow集传递构造算法”第三条中可能出现的循环依赖，以后要考虑添加进去。
+7. 多个环之间的上下关系现在只是默认按照文法录入顺序来的，以后需要精确的计算一遍。
