--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -81,10 +81,12 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 follow(L+1):null)，并将L+1从S中移除。
 3. 从左到右扫描每条产生式右部，当L是非终结符且L+1是终结符的时候，follow(L)=follow(L)+(L+1)。
 4. 扫描到产生式右部结尾的时候，若M与L都是非终结符，记录二者的传递关系Ω(M,L):follow(L)=follow(L)&follow(M)，并将L从S中移除。
+5. 所有集合继承关系计算完后，首先按照链式依赖脱钩计算一遍现在已有的和将要变成的无依赖节点，这些节点必然在从根节点出发的某条没有环的路径上。
+6. 计算完从根节点出发的链式依赖之后，选出所有环的代表节点，
 需要注意的是，2和4两条规则所存储的关系并不一样，一定不能保存在一起。
 
 上述几条只是记录了集合间的传递关系，实际传递过程中则有链式依赖传递和环式依赖脱钩的方法：
-1.
+1. 
 
 ##### 层级树（HierarchicalTree）
 该方案被否决，至少是暂时被否决。
@@ -107,9 +109,9 @@ follow(L+1):null)，并将L+1从S中移除。
 这些性质将会被填充到childNodeProperties中，并且传递给BranchTreeNode类用于生成AST类。
 
 以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：
-1. 如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。
-2. 如果这个语法节点仅包含一条有效产生式和一条空产生式（可选），并且有效产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，
-即可认为它是一个过渡节点。此时将不对它生成AST类。
+1. ~~如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。~~
+2. 如果这个语法节点仅包含多条有效产生式和一条空产生式，并且有效产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，
+且每条产生式中间的非终结符都一致；即可认为它是一个过渡节点。此时将不对它生成AST类。
 3. 如果该节点存在多个完全相同的子部分串联起来的话，意味着包含某些隐式的有限循环。
 另外，对于类似标准SQL中union这样的结构而言，并不能算在“为了保持循环而设计”的范畴。
 
