1.晚上AST生成逻辑 2.完善异常处理 3.对parser逻辑进行微调 4.添加增强的布尔变量处理

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -101,7 +101,7 @@ follow(L+1):null)，并将L+1从S中移除。
 2. 遍历这条链最简单的方法是使用递归。（目前我没有找到展开递归成递推的方法，欢迎大家进行改造）
 3. 如果在遍历中，发现某个节点还存在依赖/未出现在无依赖节点列表中，那么遍历到此结束，开始向上返回。
 
-环式依赖：（这个方法目前的算法是有缺陷的，越大的环越有可能丢失follow集符号，所以主要以学习思路为主）
+环式依赖：（这个方法目前的算法是有缺陷的，越大的环越有可能丢失follow集符号）
 以下所述的所有方法都已经在矩阵类ListMatrix中实现。
 1. 获取所有能间接的连接到自身的节点集合，这些节点被称为代表节点。
 2. 从某个代表节点开始，获取这个代表节点所有能（直接/间接）达到的节点中那些还能（直接/间接）达到代表节点的节点，也就是在同一个环上的所有节点。
@@ -119,7 +119,18 @@ follow(L+1):null)，并将L+1从S中移除。
 另外考虑到以后的扩展，可能用计数引用计算依赖会更好一点？
 ##### 层级树（HierarchicalTree）
 该方案被否决，至少是暂时被否决。
-##### 邻接矩阵
+层级树表示节点从根节点向下的访问顺序，详情请见HierarchicalTree类的JavaDoc。
+层级树有三个泛型，分别是K、V extends Colloection、D，D是V的内容
+API如下：
+1. getRoot()：获取根节点。
+2. getMaxLevel()：获取最大节点层级，也就是树的高度。
+3. size()：获取节点数量，最少是1。
+4. put(K key,K fatherNodeKey)：添加一个节点，并指定其父结点，同时添加一个空的value。如果key已经存在，则只添加和父结点的连接关系。
+5. addValue(K key,V value)：为key添加属性集合。
+6. addValue(K key,D value)：向key对应的value中添加属性。
+7. get(K key)：获取key对应的属性集合。
+8. getChildNodes(K fatherKey)：获取key对应的所有子节点。
+##### 邻接矩阵（ListMatrix）
 邻接矩阵类中为了调用简便减少计算量，所以有两个矩阵，一个是只有节点间直接连接关系，另一个包含了所有间接连接关系。
 API如下：
 1. add(K contains)：添加矩阵节点
@@ -140,8 +151,8 @@ API如下：
 4. 该节点是不是一个属性，或者可以表示成哪种变量的属性？
 这些性质将会被填充到childNodeProperties中，并且传递给BranchTreeNode类用于生成AST类。
 
-以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：
-1. ~~如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。~~
+以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：  
+~~1. 如果这个语法节点包含多条产生式，我们就不认为它是一个仅仅用于循环的过渡节点。~~
 2. 如果一个非终结符仅包含多条有效产生式和一条空产生式，并且有效产生式是右递归的，并且以“终结符 非终结符 非终结符（本身）”的形式组织，
 且每条产生式中间的非终结符都一致；即可认为它是一个过渡节点。此时将不对它生成AST类。
 3. 如果一条文法产生式存在多个完全相同的子部分串联起来的话，意味着包含某些隐式的有限循环。
@@ -149,7 +160,8 @@ API如下：
 
 第四条性质的相关判定如下：
 1. 假如一个非终结符中的所有产生式右部都只有一个终结符，那么这是一表示属性的非终结符。
-2. 如果一条产生式右部的中间出现了一些终结符，那么多半是没有用的可以抛弃的终结符。
+2. 如果一条产生式右部的中间出现了一些终结符，那么是可以抛弃的终结符。
+3. 如果一条产生式的右部表示为一个赋值，且产生式本身没有循环，那么可以设置一个属性。
 
 上面扫描完AST类的基本信息之后，就可以按照makeBranchTreeNode类中预先设置的模板方法来生成一个节点的各种对象
 
