学习形式语言与数理逻辑中

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -9,6 +9,13 @@
 就再次扩展了自动填表程序的功能。  
 最后想着反正语法分析的代码生成都要自动化了，索性顺手把词法分析的关键字表一起填了吧。就变成了现在这个样子。
 
+# 看懂各节代码需要的前置理论索引
+1. 词法分析：状态模式、有限自动机、正则文法与有限自动机的等价性
+2. 语法分析：表驱动法、下推有限自动机、上下文无关文法与下推有限自动机的等价性
+3. 文法规则解析：LL预测分析程序原理、基础图论、关系及其闭包、树的遍历
+4. 文法性质归纳与检查：上下文无关文法的化简、命题逻辑、演绎推理、可判定性
+5. AST类自动生成：反射、模板代码生成
+
 # 功能边界确定
 需要包含以下几个组件和附件：
 
@@ -39,22 +46,20 @@
 分析表内容请参阅：  
 https://github.com/kppomzh/Compilation_Principle/blob/master/3.1.%E8%87%AA%E9%A1%B6%E5%90%91%E4%B8%8B%E5%88%86%E6%9E%90%E6%B3%95%E7%9A%84%E9%A2%84%E6%B5%8B%E5%88%86%E6%9E%90%E7%A8%8B%E5%BA%8F(Parser)%E5%8E%9F%E7%90%86%E5%8F%8A%E6%9E%84%E9%80%A0.md
 
-## 3.AST自动生成（JavaPoet包 与 Tree_Span包）
-每个文法节点均包含三个通用protected方法：①添加子节点 ②设置属性 ③获取所有子节点
+### 非LL(1)的LL(k)文法的处理
+对于正常的语言，如果仅仅使用LL(1)，那么很大概率会遇到不能处理的文法。比如说对于Oracle SQL来说：  
+select [[TableSpace_Name . ]Table_Name . ]List_Name from Table_Name;   
+这个句子，按照Oracle的文法来说，是可以省略掉前面的表空间名和表名的。但是对于这几个名称来说，它们的组成结构都是一样的由大写/小写字母、数字、下划
+线组成的（稍微简化一下对象名称的定义，否则讨论起来太麻烦）。这样的字符串在词法分析当中会被统一识别为“标识符”，之间并没有区别，唯一能够区别的是他
+们所处的位置。  
+所以这里的文法，Oracle是这样写的：  
+select_list=(schema .)? (table|view .)? (*|list)
+这样的话，语法分析器从另一个终结符之后第一次读取标识符的时候，是没有办法立刻判断是应该用schema、table、list来对文法进行推导。这在自顶向下语法
+分析中已经说明过的情况，但是由于此时存在中间的非终结符层级，所以标准的LL(1)文法是没有办法处理的。此时就需要自动切换成LL(k)的分析法，继续向后读
+取k个符号，来确定当前应该采用哪条产生式。比如对select_list文法来说，当k=4时，即可完全的判定应该采用哪条具体的产生式。
+目前该功能尚未实现。
 
-另外还有一个通用属性“节点名称”以及对应的get/set方法。
-
-三个protected方法是用于继承并且重写的，根据每个节点的不同会有所变化。三个protected方法重写的规则是这样的：
-### 1. 添加子节点
-一般来说，如果一条文法产生式中存在表述复杂的非终结符，那么就需要添加子节点，表示这个地方还有很复杂的展开，需要继续向下寻找详细的处理过程。
-如果这样的节点有很多的话，可以加一个Collection类来方便遍历；推荐用List，因为很多语言的代码顺序和处理顺序是相关的。
-### 2. 添加属性
-有两种情况，如果一个非终结符是由多条简单的只包含终结符的产生式组成的，那么很大概率这个非终结符代表的是某种属性。另外一种可能就是多条产生式的形式
-类似，但是中间有一个关键终结符不一样，那么很可能那里就是一个属性。
-### 3.获取所有子节点
-将第一条所述的所有Collection类集中到一个Collection中输出。应该说这种方法不会很常用。
-
-## 4.文法规则解析（GrammarMaker包）
+## 3.文法规则解析（GrammarMaker包）
 ### 文法节点与产生式加载
 录入工具的主要作用就是读取文法文件。在这里，为了简化分析步骤，没有采用“文法文件内部引用文法文件”的方案，而是用了“外部配置文件依次加载文法文件”
 的方案；并且指定了三个必须加载的文法文件（虽然你可以不往里面写东西），依次为keyword.grammer / mark.grammer / annotation.grammer，分别
@@ -136,19 +141,46 @@ API如下：
 1. add(K contains)：添加矩阵节点
 2. addConnect(K from, K to)：添加一条直接连接
 3. isConnect(K from, K to)：判断两个节点是否连接，若from或to不存在于矩阵中则直接返回false
-4. getStartNodeConnects(K from,boolean directDependence)：统计from连接到的节点，directDependence为真时只考虑直接连接，为假时考虑间接连接。
+4. getStartNodeConnects(K from,boolean directDependence)：统计from连接到的节点，directDependence为真时只考虑直接连接，为假时考虑
+间接连接。
 5. getEndNodeConnects(K to,boolean directDependence)：作用类似上面的方法，但是方向调转为统计到达to的节点。
-6. getLoops(boolean deduplication)：获取所有在环上的节点，deduplication为真时会以随机的方式清理同一条环路上的多个节点，只留下一个代表节点。
+6. getLoops(boolean deduplication)：获取所有在环上的节点，deduplication为真时会以随机的方式清理同一条环路上的多个节点，只留下一个代表
+节点。
 7. getOnLoopNodes(K Representative)：统计与Representative在同一个环上的所有节点，包含Representative。
 
-### AST类生成信息采集
-再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。  
+## 4.文法性质归纳与检查（ASTPropertiesMaker类）
+我们现在已知每个文法符号所能推导出的所有符号和结构，但是这些结构有什么性质？对此暂时还一无所知。 
+如果不能具体的知道每一个文法符号都会表现出哪些性质，那么自动的生成语法树的JavaBean类也就是难度极大的任务；暴力罗列可能的性质虽然不也不是不可行，
+但是只要稍微复杂的文法，就会出现丢三落四、左支右绌的情况。  
+因此我们还需要再一次的梳理所有文法，挖掘文法产生式间的关系和结构。  
 
-文法节点的性质由以下几点组成：
-1. 该节点是否是终结符？
-2. 该节点是否是直接右递归的？（会不会循环回来）
+### 形式系统简单定义
+借用编译原理/计算机程序的名词来描述形式系统的话，形式系统大概由以下要素组成：
+1. 一群有限数量，且可用于文法/程序代码的符号集合。
+2. 一套语法规则，说明了如何以上述符号建构形式良好的文法表达式/程序语句。通常会要求有一个判定句子是否符合语法规则的算法。
+3. 一些附着在语法规则上的语义规则，用来具体落实代码的功能。这可以大致视为对一些公理的陈述。
+4. 执行程序的工具，它们本身也可以是程序。大致相当于形式系统中的推理规则，用来调用/控制怎么使用上述符号、语法、语义规则。
+
+### 文法化简与去除ε产生式
+
+### 去除单一产生式组
+
+### AST类生成信息采集  
+AST类信息的采集，本质上是对于一个已知的形式系统提取性质的工作。  
+什么叫做“提取形式系统的性质”？比如给定一个程序，所有输入参数都已经确定的情况下，通过对文法/语法的静态分析，观察一段程序中是否存在诸如死循环、除
+数为0、变量未定义/未赋值、空指针引用、数组越界这样的语法甚至是语义错误。如果从正面的辅助程序运行的方向来考虑，也可以帮助做到诸如确定弱类型定义、
+代码优化、隐式类型转换这样的工作。  
+在这里，分析程序所需要做的工作是分析一个非终结符所能推导出的全部符号，在这个非终结符的文法当中的性质。比如说，insert into values中，values
+后面跟随的表达式的数量可以有无穷多个，我们不能到了运行的时候无限的跟着分配变量名，必须事先在AST生成之前就分析出来这里可能会有无数个类似的符号，
+从而决定用Collection类型来存储这些可能出现的符号。
+再分析每个文法节点自身的性质，简化一些循环结构的子树。然后生成AST类供运行时存储分析结果。
+
+目前想要在这里提取出的性质有以下几点：
+1. 该节点是否与终结符等价？也就是所有产生式都只能推导出一个终结符。
+2. 该节点是否是直接右递归的？（包含所有产生式都是右递归或者只有一部分产生式右递归）
 3. 该节点是否仅仅是为了保持某些节点的循环而设计的？（消除左递归以及不定长数组）
 4. 该节点是不是一个属性，或者可以表示成哪种变量的属性？
+5. 文法中是否存在死循环？
 这些性质将会被填充到childNodeProperties中，并且传递给BranchTreeNode类用于生成AST类。
 
 以上三条性质中，第一第二两条都比较好理解，第三条性质的判定方法如下：  
@@ -163,7 +195,39 @@ API如下：
 2. 如果一条产生式右部的中间出现了一些终结符，那么是可以抛弃的终结符。
 3. 如果一条产生式的右部表示为一个赋值，且产生式本身没有循环，那么可以设置一个属性。
 
-上面扫描完AST类的基本信息之后，就可以按照makeBranchTreeNode类中预先设置的模板方法来生成一个节点的各种对象
+关于文法中是否存在死循环，简要的分析如下：  
+可能有的人照搬一些书上的原话：停机问题是不能被计算机判断的。这个话没有错，但是我们现在判断的不是一个具体程序，只是一套字符串改写规则的有效生成形
+式，在这种情况下，我们是可以对其中的一些性质做出预言的。  
+举一个最简单的例子，如果经过扫描，发现某个文法形如：$$ A \to aAB $$ $$ B \to b | ε $$，且对于非终结符A仅有一条产生式。那么很明显，从开始
+符号S逐渐展开的话，无论如何是不可能将B改写成b或者ε的；因为A只能被改写成aAB，这种文法即使使用无限的步骤也不可能将A推导成一个确定的终结符串，因
+此这是一个典型的死循环文法。  
+那么除了这种直接可见的死循环之外，还存在着由间接递归造成的死循环，这种情况更为隐蔽；但是我们仍然可以使用一定的方法来进行分析。  
+目前的实现仅对直接右递归进行分析。  
+
+按照上面的说明扫描完AST类的基本信息之后，就可以按照makeBranchTreeNode类中预先设置的模板方法来生成一个节点的各种对象
+
+## 5.AST自动生成（JavaPoet包 与 Tree_Span包）
+每个文法节点均包含三个通用protected方法：①添加子节点 ②设置属性 ③获取所有子节点
+
+另外还有一个通用属性“节点名称”以及对应的get/set方法。
+
+三个protected方法是用于继承并且重写的，根据每个节点的不同会有所变化。三个protected方法重写的规则是这样的：
+### 1. 添加子节点
+一般来说，如果一条文法产生式中存在表述复杂的非终结符，那么就需要添加子节点，表示这个地方还有很复杂的展开，需要继续向下寻找详细的处理过程。
+如果这样的节点有很多的话，可以加一个Collection类来方便遍历；推荐用List，因为很多语言的代码顺序和处理顺序是相关的。
+### 2. 添加属性
+有两种情况，如果一个非终结符是由多条简单的只包含终结符的产生式组成的，那么很大概率这个非终结符代表的是某种属性。另外一种可能就是多条产生式的形式
+类似，但是中间有一个关键终结符不一样，那么很可能那里就是一个属性。
+### 3.获取所有子节点
+将第一条所述的所有Collection类集中到一个Collection中输出。应该说这种方法不会很常用。
+
+### AST类填充工具类（makeBranchTreeNode）
+填充工具类提供对上面所述的通用方法以及各种AST类性质的代码生成。  
+API如下：  
+1. buildFile()：生成Java文件，并返回其文件对象。
+2. AnalysisChildPropClass()：按照该非终结符的文法信息生成AST类中的方法。
+3. AnalysisAttrTerminal()：生成终结符的对应布尔属性。
+4. makeExtendMethodBuilder()：生成默认的三个方法。
 
 # 未来改进计划
 1. 本质上S作为开始符号不是一个显式的过程，但是现在的实现并没有设计这部分，所以只能规定写上S的产生式并暂且规定S不能出现在任何产生式的右部；以后
@@ -175,3 +239,4 @@ API如下：
 5. 如果可能的话，统一分析后生成分析结果的形式。考察“反序列加载”或“Java file动态编译”哪种使用更方便。
 6. 现在的实现没有考虑到“follow集传递构造算法”第三条中可能出现的循环依赖，以后要考虑添加进去。
 7. 多个环之间的上下关系现在只是默认按照文法录入顺序来的，以后需要精确的计算一遍。
+8. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析。
