pre-release stable 详情请见文档最后一节

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -271,7 +271,8 @@ API如下：
 同属于一个集合中的字符将会分配相同的状态码，其他未定义的符号分配默认状态码，与退出状态码相区别。  
 3. 对string的定义，将会修改成允许用户自定义起止字符，以及有关标识符大小写不敏感的标记。  
 4. 语法解析修改为自适应LL(k)的形式，以便解决某些不属于LL(1)但属于LL文法的表达式解析。  
-5. 如果可能的话，统一分析后生成分析结果的形式。考察“反序列加载”或“Java file动态编译”哪种使用更方便。
-6. 现在的实现没有考虑到“follow集传递构造算法”第三条中可能出现的循环依赖，以后要考虑添加进去。
-7. 多个环之间的上下关系现在只是默认按照文法录入顺序来的，以后需要精确的计算一遍。
-8. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析。
+5. 文法符号顺序记录，需要修改现有的AST类的返回方法以及存储结构。
+6. 语法树打印工具的完善。
+7. 对于右递归文法的分析，现在这篇文档里写的并不能精确的分辨各种右递归的差别。
+8. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析以及ε判断。
+9. 试图取消为了衔接非终结符与终结符的中间层级，不过这个优先级靠后，因为目前看来分辨右递归类型的任务还是要靠这个中间层才能完成。
