1.文法文件，词法解析部分改进

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -95,6 +95,12 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 否则Java在生成类的时候会报错。　　
 这里为了方便调用AST类，所以不能用自动为符号分配随机变量名的方式来完成这个工作。除非哪一天本项目能够生成完整的访问者模式这种风格的分析代码。
 
+### 词法状态分析
+词法状态分析，据我所知，大致有两种可选方式。
+1. 基于终结符号的状态码分析
+2. 基于字母符号的状态码分析
+** 未完待续 **
+
 ###first集与follow集推导
 此后，Reader会计算所有非终结符的follow集（当然会先计算出所有first集），根据这些信息填写Parser的分析表。  
 如果按照《编译原理》书中的文字描述直接写first集与follow集的算法也未尝不可，只是那种算法很难写，效果也不见得好；只是适合人类学习演算，而不适合
@@ -191,7 +197,7 @@ API如下：
 
 ### 去除单一产生式组
 
-### AST类生成信息采集  
+### AST类生成信息采集
 AST类信息的采集，本质上是对于一个已知的形式系统提取性质的工作。  
 什么叫做“提取形式系统的性质”？比如给定一个程序，所有输入参数都已经确定的情况下，通过对文法/语法的静态分析，观察一段程序中是否存在诸如死循环、除
 数为0、变量未定义/未赋值、空指针引用、数组越界这样的语法甚至是语义错误。如果从正面的辅助程序运行的方向来考虑，也可以帮助做到诸如确定弱类型定义、
@@ -267,12 +273,13 @@ API如下：
 # 未来改进计划
 1. 本质上S作为开始符号不是一个显式的过程，但是现在的实现并没有设计这部分，所以只能规定写上S的产生式并暂且规定S不能出现在任何产生式的右部；以后
 解析文法规则的时候，可以不用显式指定最顶层的几条文法规则到一个固定的开始符号上。  
-2. 增加对词法符号的分析，例如定义某些字符属于标点符号，定义另一些字符属于数的构成部分；两个分组之间可以有交集；  
-同属于一个集合中的字符将会分配相同的状态码，其他未定义的符号分配默认状态码，与退出状态码相区别。  
-3. 对string的定义，将会修改成允许用户自定义起止字符，以及有关标识符大小写不敏感的标记。  
-4. 语法解析修改为自适应LL(k)的形式，以便解决某些不属于LL(1)但属于LL文法的表达式解析。  
-5. 文法符号顺序记录，需要修改现有的AST类的返回方法以及存储结构。
-6. 语法树打印工具的完善。
-7. 对于右递归文法的分析，现在这篇文档里写的并不能精确的分辨各种右递归的差别。
-8. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析以及ε判断。
-9. 试图取消为了衔接非终结符与终结符的中间层级，不过这个优先级靠后，因为目前看来分辨右递归类型的任务还是要靠这个中间层才能完成。
+这里可以细化到用语言的定义名称来指定开始符号所在的类文件名称，语言的定义名称则用grammlist的第一个文法文件名来命名。  
+2. 虽然有了对词法符号进行分析的功能，但是对于状态的分析结果并不能正确的填写到词法解析器的对应位置。只能对常用的几个状态码写死。
+3. 语法解析修改为自适应LL(k)的形式，以便解决某些不属于LL(1)但属于LL文法的表达式解析。  
+5. 对于右递归文法的分析，现在这篇文档里写的并不能精确的分辨各种右递归的差别。
+6. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析以及ε判断。
+7. 试图取消为了衔接非终结符与终结符的中间层级，不过这个优先级靠后，因为目前看来分辨右递归类型的任务还是要靠这个中间层才能完成。
+
+## 后注
+虽然看上去Antlr的终结符定义方法确实很好，但是用那种方法定义的终结符并不完全适合进行常规的LL文法分析。在某些极端的情况下会造成下推的冲突。类似于
+LL分析中的提取左侧公因子。Antlr用优先级的方式处理了这个问题，但是本文档并没有处理方法。
