1.更新文档 2.改进词法分析，添加接口

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -1,5 +1,6 @@
 文法解析器——语法解析器的自动生成工具
 =================
+※推荐使用Typora及Fira Code字体来阅读本文档,以获得最佳阅读效果
 
 # 开发构想
 本项目在思路上部分仿照Antlr v4，本来计划单独写一个SQL语言解析成语法树的项目，为此重新翻书学习写教程。   
@@ -16,6 +17,15 @@
 4. 文法性质归纳与检查：上下文无关文法的化简、命题逻辑、演绎推理、可判定性
 5. AST类自动生成：反射、模板代码生成
 
+# 概念定义
+1. AST：AST是"Abstract Syntax Tree"的缩写，汉语意思是“抽象语法树”，和项目名称没有任何关系。
+2. 文法符号：用来构建不同分析层次的标记符号，目的在于用尽量少的符号完成对语言的梳理。
+3. 词法符号：是一种特殊的文法符号，它不能被继续分解为其他文法符号。
+4. 字符：单个ASCII符号或者UTF符号。
+5. 状态码：标记字符，在词法分析中有相似的性质的字符会被分配相同状态码。
+6. first集：任意文法符号M，假定以M做为开始符号，所推导出的所有句子的第一个终结符号所组成的集合。
+7. follow集：任意文法符号M，在仅仅不对M进行推导的情况下，在所有产生式推导出的所有句子中，出现在M右侧的第一个终结符号所组成的集合。
+
 # 功能边界确定
 需要包含以下几个组件和附件：
 
@@ -29,9 +39,10 @@
 词法分析器应该为每一个可能读取到的字符设置一个状态码，状态码是用来引导有限自动机进行状态转移的。每个状态码事实上对应了完整的有限自动机的一个子自
 动机，在这里表现为一个函数的形式。
 
-由于每种单词对应的字符状态都只有几种，这样，在每个子自动机/函数内部，就可以很容易得出现在是否应该继续读入字符并且接续下去，方便进行分词。
+由于每种类型的词法符号对应的字符状态都只有几种，这样，在每个子自动机/函数内部，就可以很容易得出现在是否应该继续读入字符并且接续下去，方便进行分
+词。
 
-除了符号，因为多个字符连在一起也有可能分属不同的符号单词，此时需要每次读入符号就判断一次。
+除了单一字符组成的标点符号，多个字符连在一起也有可能分属不同的标点符号，此时需要每次读入符号就判断一次。
 
 需要注意的是，划分字符所属的状态时，如果两个字符的作用有任何不一致，那么一定要分到两个状态码下面去。因为如果分开的话只需要在每个子自动机里多添加
 一个节点两条路径；不分开的话就要在不同的节点里写逻辑判断，这样难度更大而且更容易出错。
@@ -99,6 +110,28 @@ Reader会首先加载这三个文件并将其填到Lex中；然后按行分析gr
 词法状态分析，据我所知，大致有两种可选方式。
 1. 基于终结符号的状态码分析
 2. 基于字母符号的状态码分析
+Antlr采用的是第一种方式，将所有的终结符号用关键字显式的指定，所以Antlr的Lex类看起来就像一个Java bean一样，对于所有已定义的终结符都有一个状态码，需要的时候直接从数组中用相对地址
+取出对照；这种方式编写状态机较为困难，但是组织文法符号定义很简单。  
+本项目采用的是第二种方式，为每一个可能出现的字符都给定一个状态码，这种方式有利于编写状态机，但是在文法符号定义上的限制较大。  
+ 
+本项目在词法符号定义上有以下几个限制：
+1. 对文法文件的分析区分大小写；词法分析器采用小写字母进行分析，并且默认会将大写字母转换成小写字母，字符串中除外。
+2. 词法符号的组合形式自定义仅限于在keyword.grammer中。
+3. 词法符号的组合方法有两种，组合的时候两个符号之间用空格分开；既可以用单独的字符进行组合，也可以用已经存在的词法符号达到批量添加的效果。
+4. 未进行组合形式自定义的词法符号（包含三个基本grammer文件中的所有符号），会用其名称中的所有字符做为其组合字符。
+5. 固定关键字STRING，用于定义字符串的起始与终结符号，其中所有字符的状态码都会被置3。
+6. 固定关键字INTEGER，用于划分所有数字类型的字符，涉及到INTEGER的字符的状态码都会被置2。
+7. 固定关键字toLowerCase，用于标记非字符串部分的标识符是否不转换小写。比如希望定义一个名称中含有大写的变量，可以用这里的字符包装起来。
+8. 固定关键字EOF，用于划分句子，停止分析。
+9. 空格、回车、换行、换页是代表分割单词的显性标识，将会给这四个字符的状态码置0。
+10. 固定转义字符是'\'。
+
+一个字符可以出现在多种类型的词法符号后面，除了：
+1. STRING中的字符不允许出现在别的词法符号的定义中。
+2. EOF中的字符不允许出现在别的词法符号的定义中。
+3. toLowerCase中的字符不允许出现在别的词法符号的定义中。
+
+进行词法状态分析的时候，分析器中会内置一个charStatus的参数，用来在出现一个字符用在多种类型的词法符号中的情况下，给这样的字符分配状态码用。
 ** 未完待续 **
 
 ###first集与follow集推导
@@ -153,7 +186,6 @@ follow(L+1):null)，并将L+1从S中移除。
 重叠节点环的问题。
 第三种方案是用邻接矩阵先记录所有直接相连的节点，然后用沃舍尔算法求传递闭包（如果需要间接连接信息）；这种方法比较消耗内存，但是运行时间只有O(n^3^)。
 所以更倾向于使用第三种方案来处理环。
-另外考虑到以后的扩展，可能用计数引用计算依赖会更好一点？
 ##### 层级树（HierarchicalTree）
 该方案被否决，至少是暂时被否决。
 层级树表示节点从根节点向下的访问顺序，详情请见HierarchicalTree类的JavaDoc。
@@ -193,9 +225,35 @@ API如下：
 3. 一些附着在语法规则上的语义规则，用来具体落实代码的功能。这可以大致视为对一些公理的陈述。
 4. 执行程序的工具，它们本身也可以是程序。大致相当于形式系统中的推理规则，用来调用/控制怎么使用上述符号、语法、语义规则。
 
-### 文法化简与去除ε产生式
+### 文法化简
+#### 无用符号分析
+文法化简的第一步是清除文法产生式中从未被使用的文法符号，所谓从未被使用的文法符号，我们可以从以下两个角度去理解：
+1. 文法有显式的开始符号，那么没有被这个开始符号直接或者间接能推导出的文法符号都是未被使用的。
+2. 文法没有显式的开始符号，从概率考虑，可以认为文法无向图的最大子图以外的所有文法符号都是未被使用的。
 
-### 去除单一产生式组
+如果文法没有显式的开始符号，这种情况其实是不推荐的，因为分析无用符号的时候，只要这个符号能推导出其他的符号，那么就很难认定它没有用。但是我们可以
+假设，如果一个符号能与大部分的文法符号产生联通（此时的连通性不能考虑箭头方向）的话，那么极大可能这个文法符号是会被使用的。基于这种假设，我们可以
+通过计算最大连通子图的方法来分析哪些文法符号可能是无用的。
+
+不管采用哪种方式来分析无用符号，邻接矩阵都是必不可少的工具。相对来说，有显式开始符号的文法模型在计算无用符号的速度上也优于没有显式开始符号的模型。
+从开始符号出发计算所有符号的单向联通路径显然比计算双向联通路径后再计算连通分量简单得多。
+
+#### 去除ε产生式
+消除ε产生式的第一条件是语言不能允许空字符串的出现。
+如果一个文法G~1~有以下产生式：
+$$
+    S \to 01 | 0A | 0S1
+    A \to 2A | ε
+$$
+如果简单的删除A->ε这一条产生式，则会得到文法G~2~:
+$$
+    S \to 01 | 0A | 0S1
+    A \to 2A
+$$
+** 未完待续 **
+
+#### 去除单一产生式组
+标准的LL文法去除二义性的方法是在文法中加入很多中间符号
 
 ### AST类生成信息采集
 AST类信息的采集，本质上是对于一个已知的形式系统提取性质的工作。  
