1.更新文档 2.开始第二个改进阶段，接下来主要解决的是两个问题 ①LL(1)->LL(k) ②存在循环的节点在Parser中的简化压栈行为 解决这两个问题可以极大的改进识别语言的能力，以及对AST进行操作的能力。
化简语言的三大功能可以暂时滞后，因为并不影响使用和识别能力。

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -240,15 +240,29 @@ API如下：
 
 #### 去除ε产生式
 消除ε产生式的第一条件是语言不能允许空字符串的出现。
+尽管允许ε产生式给我们构造文法带来了很大的便利，但是同样也使得文法的分析变得更加复杂
 如果一个文法G~1~有以下产生式：
 $$
-    S \to 01 | 0A | 0S1
+    S \to 01 | 0A1 | 0S1
     A \to 2A | ε
 $$
 如果简单的删除A->ε这一条产生式，则会得到文法G~2~:
 $$
-    S \to 01 | 0A | 0S1
+    S \to 01 | 0A1 | 0S1
     A \to 2A
+$$
+
+显然，G~2~与G~1~并不相同，阻断了A->ε之后，产生式A->2A和S->0A1当中的A再也无法消除，因此在修改文法之后，要保证在A->2A和S->0A1两条产生式中能
+“出现”ε，就只能添加如下两条产生式：
+$$
+    S \to 01
+    A \to 2
+$$
+
+由于S->01已经存在于现有产生式集合里，所以新的与G~1~等价的G~3~文法如下：
+$$
+    S \to 01 | 0A1 | 0S1
+    A \to 2A | 2
 $$
 ** 未完待续 **
 
@@ -337,6 +351,7 @@ API如下：
 5. 对于右递归文法的分析，现在这篇文档里写的并不能精确的分辨各种右递归的差别。
 6. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析以及ε判断。
 7. 试图取消为了衔接非终结符与终结符的中间层级，不过这个优先级靠后，因为目前看来分辨右递归类型的任务还是要靠这个中间层才能完成。
+8. 没有完全发挥出文法分析的能力，例如分析出一个非终结符的循环状态的时候，不能指示Parser按照对待循环的方式向List中加入变量，只能按层级展开。
 
 ## 后注
 虽然看上去Antlr的终结符定义方法确实很好，但是用那种方法定义的终结符并不完全适合进行常规的LL文法分析。在某些极端的情况下会造成下推的冲突。类似于
