1.修正语法文件解读错误 2.为LL(k)调整语法树内存模型 3.调整语法树生成代码

--- a/文法解析器——语法解析器的自动生成工具 .md
+++ b/文法解析器——语法解析器的自动生成工具 .md
@@ -104,7 +104,7 @@ select_list=(schema .)? (table|view .)? (*|list)
 
 对于第一个问题，需要再次对数据结构进行改造，加入一个多叉搜索树来解决保存和查找的问题。
 对于第二个问题，需要对JavaPoet的生成模板进行改进。
-** 未完待续 **
+接下来的内容较为复杂，我会在编译原理的笔记中新开一个章节详细的介绍这部分的内容。
 
 ## 3.文法规则解析（GrammarMaker包）
 ### 文法节点与产生式加载
@@ -368,6 +368,12 @@ API如下：
 6. 根据更加高级的形式语言学知识，将分析过程简化，省略掉繁琐的follow集分析以及ε判断。
 7. 试图取消为了衔接非终结符与终结符的中间层级，不过这个优先级靠后，因为目前看来分辨右递归类型的任务还是要靠这个中间层才能完成。
 8. 没有完全发挥出文法分析的能力，例如分析出一个非终结符的循环状态的时候，不能指示Parser按照对待循环的方式向List中加入变量，只能按层级展开。
+9. 目前的实现中，有一个暂时称为“同一非终结符下所有可能节点的首符集交集不为空”的冲突。  
+    由于目前的实现中，对问法术节点添加子节点的操作是统一的通过一个addChild方法来实现的，addChild内部是通过switch case，判断待加入节点的节点名称，
+来将待加入节点和对应位置的节点联系起来。  
+    这种方法方便父类对子类的管理和重载，也向parser隐藏了不同节点的细节，但是过于分散的子节点内存模型不利于节点内的管理，所以当两个子节点的首符
+集包含了同一个终结符号的时候，就很容易出现问题。  
+    这里的子节点包括了非终结符和终结符的BranchTreeNode对象。目前看来，这个问题可以和LL(k)一同得到改进。  
 
 ## 后注
 虽然看上去Antlr的终结符定义方法确实很好，但是用那种方法定义的终结符并不完全适合进行常规的LL文法分析。在某些极端的情况下会造成下推的冲突。类似于
